fixed the hover color/visibility

--- a/style.css
+++ b/style.css
@@ -363,8 +363,9 @@ img.mid-pic {
 }
 
 
-a {
+nav a {
   text-decoration: none;
+  color: white;
 }
 
 li:hover {
@@ -373,7 +374,7 @@ li:hover {
   
 }
 
-li a:hover {
+li a:hover, div a:hover {
   color: blue;
 }
   
